examples/test/testpolicy19728.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19728
  namespace: namespace351
spec:
  podSelector:
    matchLabels:
      key1: value28
      key16: value2
      key39: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value27
          key38: value14
          key13: value48
      podSelector:
        matchLabels:
          key16: value30
